# efs-salon-os

./: .env.example  .gitignore  AD_HOC_MULTI_STAFF_TESTING.md  HTTPS-SETUP.md  IMPLEMENTATION_SUMMARY.md  MULTI_STAFF_COMPLETE_SUMMARY.md  MULTI_STAFF_TESTING_FLOW.md  PENDING_BALANCE_GUIDE.md  PENDING_PAYMENT_TRACKING.md  QUICKSTART.md  README.md  WSL2-NETWORK-SETUP.md  WSL2-QUICKSTART.md  claude.md  compose.dev.yaml  compose.prod.yaml  compose.production.yaml  compose.yaml  config.txt  dev.sh  diagnose-network.ps1  docker-compose.dev.yml  env.txt  mobile-access-troubleshoot.ps1  setup-auto-forward.ps1  setup-https.sh  stop.sh  wsl-port-forward.ps1
backend/: BUGFIXES_TIMEZONE_CUSTOMERS.md  Dockerfile  Dockerfile.dev  POS_MODULE_SUMMARY.md  REDIS_CACHING_IMPLEMENTATION.md  claude.md  create_staff_profiles.sh  fix_staff_profiles.py  pyproject.toml  pyrightconfig.json  spec.md  test_invoice_real.py  test_invoice_with_bills.py  test_receipt.py
backend/alembic/: env.py
backend/alembic/versions/: 01d5c8e3f4a1_add_salon_settings_table.py  09164dc44353_merge_migration_heads.py  1a137ed244c2_add_average_duration_minutes_to_services.py  31b428a12b36_add_attendance_tracking_table.py  3766b3db3744_add_daily_reconciliation_table.py  41d2148c77a2_add_daily_goals_to_salon_settings.py  44b46a5b7b01_add_cancellation_fields_to_walkins.py  (+43 more)
backend/app/: __init__.py  config.py  database.py  main.py  utils.py  worker.py
backend/examples/: multi_staff_service_example.py
backend/scripts/: README.md  validate_settings.py
backend/tests/: __init__.py  conftest.py  test_purchases.py
(+567 files in other folders)
